--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,6 +1,6 @@
 // Colors
 $blue: #2ba9e0;
-$red: #ff5027;
+$red: #b32100;
 
 // Greys
 $grey-50: #fafafa;
